--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev --turbopack && prisma generate",
-        "build": "next build && prisma generate",
+        "build": "next build ",
         "start": "next start",
         "lint": "next lint"
     },
@@ -32,9 +32,7 @@
         "mongodb": "^6.18.0",
         "mongoose": "^8.17.1",
         "next": "15.3.5",
-        "next-redux-wrapper": "^8.1.0",
         "next-themes": "^0.4.6",
-        "nodemailer": "^6.10.1",
         "postcss": "^8.5.6",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
