--- a/client/.env
+++ b/client/.env
@@ -12,7 +12,7 @@ EMAIL_SENDER_ADDRESS="onboarding@impmap.ru"
 
 
 
-NEXT_PUBLIC_ORIGIN_SERVER='http://localhost:5000'
+NEXT_PUBLIC_ORIGIN_SERVER='http://217.198.13.59/api'
 
 
 
