--- a/client/.env
+++ b/client/.env
@@ -12,7 +12,7 @@ EMAIL_SENDER_ADDRESS="onboarding@impmap.ru"
 
 
 
-NEXT_PUBLIC_ORIGIN_SERVER='http://45.141.76.253/api'
+NEXT_PUBLIC_ORIGIN_SERVER='http://45.141.76.253/app'
 
 
 
