--- a/nginx.conf
+++ b/nginx.conf
@@ -14,8 +14,8 @@ http {
             proxy_pass http://frontend:3000/;
         }
 
-        location /api/ {
-            proxy_pass http://backend:8000/;
+        location /apppi/ {
+            proxy_pass http://backend:5000/;
         }
     }
 }
