--- a/client/.env
+++ b/client/.env
@@ -1,5 +1,5 @@
 BETTER_AUTH_SECRET=qWeugFzV9eIHyinUdlg7Y4G7rVKVjMEK
-BETTER_AUTH_URL=http://45.141.76.253 #Base URL of your app/
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
 
 
 DATABASE_URL='mongodb+srv://masonbober:bimbimbambam@cluster0.7wgony6.mongdob.net/testAuth'
@@ -12,7 +12,7 @@ EMAIL_SENDER_ADDRESS="onboarding@impmap.ru"
 
 
 
-NEXT_PUBLIC_ORIGIN_SERVER='http://45.141.76.253/app'
+NEXT_PUBLIC_ORIGIN_SERVER='http://45.141.76.253/apppi'
 
 
 
