--- a/client/.env
+++ b/client/.env
@@ -2,9 +2,9 @@ BETTER_AUTH_SECRET=qWeugFzV9eIHyinUdlg7Y4G7rVKVjMEK
 BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
 
 
-DATABASE_URL='mongodb+srv://masonbober:bimbimbambam@cluster0.7wgony6.mongdob.net/testAuth'
+# DATABASE_URL='mongodb+srv://masonbober:bimbimbambam@cluster0.7wgony6.mongdob.net/testAuth'
 NEON_URL='postgresql://neondb_owner:npg_AkX3vngUum0Q@ep-soft-smoke-a2r1t5cd-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
-ADMIN_EMAILS=""
+ADMIN_EMAILS="masonbober@yandex.ru"
 
 RESEND_API_KEY='re_Xur3Lj98_8WBFpxYJ8FRXEJtDpKwYRgJ8'
 EMAIL_SENDER_NAME="Emperor"
@@ -12,7 +12,7 @@ EMAIL_SENDER_ADDRESS="onboarding@impmap.ru"
 
 
 
-NEXT_PUBLIC_ORIGIN_SERVER='http://84.54.30.93/apppi'
+NEXT_PUBLIC_ORIGIN_SERVER='http://localhost:5000'//адресс куда ходить на бекенд за статикой и данными 
 
 
 
