--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,6 @@
-# Кофигурация с поддоменом и SSL сертификатами в файле nginx_subdomain.conf
+
+
+//это дефолт конфиг с инета , возможно неправилный 
 user  root;
 worker_processes  1;
 
@@ -8,7 +10,7 @@ events {
 http {
     server {
         listen       80;
-        server_name  84.54.30.93; # <-- укажите ip адрес вашего сервера
+        server_name 45.141.76.253; # <-- укажите ip адрес вашего сервера
 
         location / {
             proxy_pass http://frontend:3000/;
