--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,8 @@
 FROM node:20.11.1-slim as build
-WORKDIR /
 
 COPY package.json package.json
 RUN npm install
-COPY . .
+COPY . /frontend
 RUN npm run build
 
 # FROM nginx:stable-alpine
